<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menuHome"
          android:icon="@drawable/home"
          android:title="@string/home"/>

    <item android:id="@+id/menuMonitoring"
        android:icon="@drawable/monitoring"
        android:title="@string/monitoring"/>

    <item android:id="@+id/menuControl"
        android:icon="@drawable/control"
        android:title="@string/controller"/>

    <item android:id="@+id/menuStream"
        android:icon="@drawable/visual"
        android:title="@string/videoStream"/>

    <item android:id="@+id/menuAccount"
        android:icon="@drawable/account"
        android:title="@string/account"/>

    <item android:title="@string/others">
        <menu>
            <item
                android:id="@+id/menuSetting"
                android:icon="@drawable/setting"
                android:title="@string/setting"/>
            <item
                android:id="@+id/menuAboutUs"
                android:icon="@drawable/about"
                android:title="@string/about"/>
            <item
                android:id="@+id/MenuLogout"
                android:icon="@drawable/logo"
                android:title="@string/logout"/>
        </menu>
    </item>

</menu>